score is functional but doesnt stop the script when player's score is 0

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 </head>
 
 <body>
+    <h1>Lets play hangman!</h1>
     <p id="message"></p>
-    <p id="prompt">Press any key to get started!</p>
+    <h2 id="prompt">Press any key to get started!</h2>
+    <P>Number of guesses left:</P>
+    <p id="liferemain"></p>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
