Game over function added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h2 id="prompt">Press any key to get started!</h2>
     <P>Number of guesses left:</P>
     <p id="liferemain"></p>
+    <p id="lettersused"></p>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
