trying to add wrong letters to an array unsuccesfully

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h2 id="prompt">Press any key to get started!</h2>
     <P>Number of guesses left:</P>
     <p id="liferemain"></p>
+    <p>Wrong letters picked:</p>
     <p id="lettersused"></p>
 
 
