--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <h1>Lets play hangman!</h1>
+    <h1 class="jumbotron">Lets play hangman!</h1>
     <p id="message"></p>
     <h2 id="prompt">Press any key to get started!</h2>
-    <P>Number of guesses left:</P>
+    <P class = "card">Number of guesses left:</P>
     <p id="liferemain"></p>
     <p>Wrong letters picked:</p>
     <p id="lettersused"></p>
