--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -15,7 +16,7 @@
     <h1 class="jumbotron">Lets play hangman!</h1>
     <p id="message"></p>
     <h2 id="prompt">Press any key to get started!</h2>
-    <P class = "card">Number of guesses left:</P>
+    <P class="card">Number of guesses left:</P>
     <p id="liferemain"></p>
     <p>Wrong letters picked:</p>
     <p id="lettersused"></p>
@@ -30,7 +31,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src = "assets/javascript/game.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
