background image added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <p id="liferemain"></p>
     <p>Wrong letters picked:</p>
     <p id="lettersused"></p>
+    <img src="/assets/images/hangman-150.png" alt="hangman">
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
